# stella

./: .gitignore  .install-linux-deps.sh  .travis.yml  CMakeLists.txt  Doxyfile  README.md  install-linux-deps.sh
Doxygen/: Doxyfile
cmake/: FindPETSc.cmake  testing.cmake
doc/html/: annotated.html  base_8h_source.html  block_8h_source.html  boundary_8h_source.html  classcpp_1_1ast_1_1Node-members.html  classcpp_1_1ast_1_1Node.html  classcpp_1_1ast_1_1Type-members.html  classcpp_1_1ast_1_1Type.html  classcpp_1_1gmock__class__test_1_1TestCase-members.html  classcpp_1_1gmock__class__test_1_1TestCase.html  classcpp_1_1tokenize_1_1Token-members.html  classcpp_1_1tokenize_1_1Token.html  classes.html  classgtest__break__on__failure__unittest_1_1GTestBreakOnFailureUnitTest-members.html  classgtest__break__on__failure__unittest_1_1GTestBreakOnFailureUnitTest.html  classgtest__catch__exceptions__test_1_1CatchCxxExceptionsTest-members.html  classgtest__catch__exceptions__test_1_1CatchCxxExceptionsTest.html  classgtest__catch__exceptions__test_1_1CatchSehExceptionsTest-members.html  classgtest__catch__exceptions__test_1_1CatchSehExceptionsTest.html  classgtest__filter__unittest_1_1GTestFilterUnitTest-members.html  classgtest__filter__unittest_1_1GTestFilterUnitTest.html  classgtest__help__test_1_1GTestHelpTest-members.html  classgtest__help__test_1_1GTestHelpTest.html  classgtest__json__outfiles__test_1_1GTestJsonOutFilesTest-members.html  classgtest__json__outfiles__test_1_1GTestJsonOutFilesTest.html  classgtest__json__output__unittest_1_1GTestJsonOutputUnitTest-members.html  classgtest__json__output__unittest_1_1GTestJsonOutputUnitTest.html  classgtest__list__tests__unittest_1_1GTestListTestsUnitTest-members.html  classgtest__list__tests__unittest_1_1GTestListTestsUnitTest.html  classgtest__shuffle__test_1_1GTestShuffleUnitTest-members.html  classgtest__shuffle__test_1_1GTestShuffleUnitTest.html  classgtest__throw__on__failure__test_1_1ThrowOnFailureTest-members.html  classgtest__throw__on__failure__test_1_1ThrowOnFailureTest.html  classgtest__xml__outfiles__test_1_1GTestXMLOutFilesTest-members.html  classgtest__xml__outfiles__test_1_1GTestXMLOutFilesTest.html  classgtest__xml__output__unittest_1_1GTestXMLOutputUnitTest-members.html  classgtest__xml__output__unittest_1_1GTestXMLOutputUnitTest.html  classgtest__xml__test__utils_1_1GTestXMLTestCase-members.html  classgtest__xml__test__utils_1_1GTestXMLTestCase.html  classpump_1_1Cursor-members.html  (+187 more)
doc/latex/: annotated.tex  classcpp_1_1ast_1_1Node.tex  classcpp_1_1ast_1_1Type.tex  classcpp_1_1gmock__class__test_1_1TestCase.tex  classcpp_1_1tokenize_1_1Token.tex  classgtest__break__on__failure__unittest_1_1GTestBreakOnFailureUnitTest.tex  classgtest__catch__exceptions__test_1_1CatchCxxExceptionsTest.tex  classgtest__catch__exceptions__test_1_1CatchSehExceptionsTest.tex  files.tex  (+63 more)
doxygen/: Doxyfile
examples/: CMakeLists.txt  boundary.c  driver.c  problem.c  solver.c  solver.h  state.h
html/: _c_make_c_compiler_id_8c.html  _c_make_c_x_x_compiler_id_8cpp.html  _c_make_fortran_compiler_id_8_f.html  _r_e_a_d_m_e_8md.html  annotated.html  base_8h.html  base_8h_source.html  block_8h.html  block_8h_source.html  boundary_8c.html  boundary_8h.html  boundary_8h_source.html  classes.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_2bfe34e2e9e629f338fca84246b5ece6.html  dir_3fd3cbf9ab2c0efdf6a9d51c2b8ef76b.html  dir_4eeb864c4eec08c7d6b9d3b0352cfdde.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_63772b626f2709090f0bdca0f40827b4.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_69187af004ff5bf194ef5ea96ea633ff.html  dir_6f7cb6f2b0c7f7e40e2a6a4e06adbfe5.html  dir_8f41e5cf862ae39c41f2722ac517674b.html  dir_bc210ed17bb6533b52d3949b9d6927ea.html  dir_d0a0c9a9855e7ffec00f85786b8e83e4.html  driver_8c.html  feature__tests_8c.html  feature__tests_8cxx.html  files.html  functions.html  functions_vars.html  globals.html  globals_a.html  globals_b.html  globals_c.html  globals_d.html  globals_defs.html  globals_e.html  globals_enum.html  globals_eval.html  (+161 more)
latex/: _c_make_c_compiler_id_8c.tex  _c_make_c_x_x_compiler_id_8cpp.tex  _c_make_fortran_compiler_id_8_f.tex  annotated.tex  base_8h.tex  block_8h.tex  boundary_8c.tex  boundary_8h.tex  dir_13e138d54eb8818da29c3992edef070a.tex  dir_2bfe34e2e9e629f338fca84246b5ece6.tex  dir_3fd3cbf9ab2c0efdf6a9d51c2b8ef76b.tex  dir_4eeb864c4eec08c7d6b9d3b0352cfdde.tex  dir_63772b626f2709090f0bdca0f40827b4.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_69187af004ff5bf194ef5ea96ea633ff.tex  dir_6f7cb6f2b0c7f7e40e2a6a4e06adbfe5.tex  dir_8f41e5cf862ae39c41f2722ac517674b.tex  dir_bc210ed17bb6533b52d3949b9d6927ea.tex  dir_d0a0c9a9855e7ffec00f85786b8e83e4.tex  driver_8c.tex  feature__tests_8c.tex  files.tex  grid_8c.tex  grid_8h.tex  map_8c.tex  map_8h.tex  md__r_e_a_d_m_e.tex  mpi__main_8cc.tex  option_8c.tex  option_8h.tex  problem_8c.tex  problem_8h.tex  refman.tex  solver_8c.tex  solver_8h.tex  state_8c.tex  state_8h.tex  stella__bc_8c.tex  stella__bc_8h.tex  stella__boundary_8c.tex  (+58 more)
src/: CMakeLists.txt  stella_bc.c  stella_bc.h  stella_boundary.c  stella_boundary.h  stella_cedar.c  stella_cedar.h  stella_classify.c  stella_classify.h  stella_dirichlet.c  stella_dirichlet.h  stella_dmap.c  stella_dmap.h  stella_fd.c  stella_fd.h  stella_gen.h  stella_grid.c  stella_grid.h  stella_interface.c  stella_interface.h  stella_io.c  stella_io.h  stella_level.h  stella_mat.c  stella_mat.h  stella_metric.c  stella_metric.h  stella_neumann.c  stella_neumann.h  stella_operator.c  stella_operator.h  stella_pc.c  stella_pc.h  stella_rhs.h  stella_signals.c  stella_signals.h  stella_solver.c  stella_solver.h  stella_state.h  stella_stencil.c  (+3 more)
test/: CMakeLists.txt  coverage.org  test_models.cc  test_models_3.cc  test_signals.cc
test/2d/: CMakeLists.txt
test/3d/: CMakeLists.txt
tools/: CMakeLists.txt
tools/single-block/: CMakeLists.txt  README.md  base.h  block.h  boundary.c  boundary.h  config.json  driver.c  grid.c  grid.h  map.c  map.h  option.h  problem.c  problem.h  solver.c  solver.h  state.c  state.h
(+155 files in other folders)
